# CXXPluginFramework

./: CMakeLists.txt  README.md  animal.h  cat.cpp  cat.h  dog.cpp  dog.h  main.cpp  plugin_builder.h  plugin_loader.h
